--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Jinja2==3.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
 pycodestyle==2.7.0
+python-dotenv==0.19.0
 SQLAlchemy==1.4.25
 toml==0.10.2
 Werkzeug==2.0.1
