Reimplement api using db as data storage.

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-TACCON_DB_CONNECTION=postgresql://postgres:pass1234@localhost:5432/postgres
-
+TACCON_DB_USER=postgres
+TACCON_DB_PASS=pass1234
+TACCON_DB_HOST=localhost
+TACCON_DB_PORT=5432
+TACCON_DB_NAME=postgres
